<resources>
    <string name="app_name">Calculator</string>
    <string name="btn_c">C</string>
    <string name="btn_percent">%</string>
    <string name="btn_div">/</string>
    <string name="btn_digit7">7</string>
    <string name="btn_digit8">8</string>
    <string name="btn_digit9">9</string>
    <string name="btn_mul">x</string>
    <string name="btn_digit4">4</string>
    <string name="btn_digit5">5</string>
    <string name="btn_digit6">6</string>
    <string name="btn_plus">+</string>
    <string name="btn_digit1">1</string>
    <string name="btn_digit2">2</string>
    <string name="btn_digit3">3</string>
    <string name="btn_minus">-</string>
    <string name="btn_ac">AC</string>
    <string name="btn_digit0">0</string>
    <string name="btn_dot">.</string>
    <string name="btn_equal">=</string>
    <string name="calculus">10+15</string>
    <string name="result">=25</string>
</resources>