<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:gravity="center">

            <com.google.android.material.button.MaterialButton
                style="@style/operatorButton"
                android:text="@string/btn_c"/>

            <com.google.android.material.button.MaterialButton
                style="@style/operatorButton"
                app:icon="@drawable/baseline_backspace_24"
                app:iconTint="@color/btnBackground2" />
            <com.google.android.material.button.MaterialButton
                style="@style/operatorButton"
                android:text="@string/btn_percent"/>
            <com.google.android.material.button.MaterialButton
                style="@style/operatorButton"
                android:text="@string/btn_div"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:gravity="center">

            <com.google.android.material.button.MaterialButton
                style="@style/digitButton"
                android:text="@string/btn_digit7" />
            <com.google.android.material.button.MaterialButton
                style="@style/digitButton"
                android:text="@string/btn_digit8"/>
            <com.google.android.material.button.MaterialButton
                style="@style/digitButton"
                android:text="@string/btn_digit9"/>
            <com.google.android.material.button.MaterialButton
                style="@style/operatorButton"
                android:text="@string/btn_mul"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:gravity="center">

            <com.google.android.material.button.MaterialButton
                style="@style/digitButton"
                android:text="@string/btn_digit4"/>
            <com.google.android.material.button.MaterialButton
                style="@style/digitButton"
                android:text="@string/btn_digit5"/>
            <com.google.android.material.button.MaterialButton
                style="@style/digitButton"
                android:text="@string/btn_digit6"/>
            <com.google.android.material.button.MaterialButton
                style="@style/operatorButton"
                android:text="@string/btn_plus"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:gravity="center">

            <com.google.android.material.button.MaterialButton
                style="@style/digitButton"
                android:text="@string/btn_digit1"/>
            <com.google.android.material.button.MaterialButton
                style="@style/digitButton"
                android:text="@string/btn_digit2"/>
            <com.google.android.material.button.MaterialButton
                style="@style/digitButton"
                android:text="@string/btn_digit3"/>
            <com.google.android.material.button.MaterialButton
                style="@style/operatorButton"
                android:text="@string/btn_minus"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:gravity="center">

            <com.google.android.material.button.MaterialButton
                style="@style/operatorButton"
                android:textSize="20sp"
                android:text="@string/btn_ac"/>
            <com.google.android.material.button.MaterialButton
                style="@style/digitButton"
                android:text="@string/btn_digit0"/>
            <com.google.android.material.button.MaterialButton
                style="@style/digitButton"
                android:text="@string/btn_dot"/>
            <com.google.android.material.button.MaterialButton
                style="@style/operatorButton"
                android:text="@string/btn_equal"/>
        </LinearLayout>

    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>